--- a/index.html
+++ b/index.html
@@ -1,308 +1,82 @@
+Certainly! I've updated the HTML file with the provided URL:
+
+```html
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5K8VYJZXYX"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-5K8VYJZXYX');
-</script>
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Sign In & Details Form</title>
+    <title>Mobile-Friendly Calendar</title>
+    <link href="https://cdn.dhtmlx.com/scheduler/edge/dhtmlxscheduler.css" rel="stylesheet" type="text/css">
+    <script src="https://cdn.dhtmlx.com/scheduler/edge/dhtmlxscheduler.js" charset="utf-8"></script>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
             margin: 0;
+            padding: 0;
+            font-family: 'Helvetica', sans-serif;
+            background-color: Open Web Calendar;
         }
 
-        .container {
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            width: 100%;
-            max-width: 600px;
+        /* Mobile styles */
+        @media only screen and (max-width: 768px) {
+            body {
+                font-size: 14px; /* Adjust font size for smaller screens */
+            }
+
+            /* Add other mobile-specific styles here */
         }
 
-        .form-header {
-            background-color: #0078d4;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
+        /* Your provided CSS */
+        .event,
+        .dhx_cal_tab.active,
+        .dhx_cal_tab.active:hover {
+            background-color: Open Web Calendar;
         }
 
-        .form-header h1 {
-            margin: 0;
-            font-size: 24px;
+        .dhx_month_head,
+        .dhx_cal_tab,
+        .dhx_cal_today_button {
+            color: Open Web Calendar;
         }
 
-        .form-body {
-            padding: 20px;
+        .dhx_cal_tab,
+        .dhx_cal_tab.active {
+            border-color: Open Web Calendar;
         }
 
-        .form-group {
-            margin-bottom: 20px;
+        .dhx_month_body,
+        .dhx_month_head,
+        .dhx_cal_container {
+            background-color: Open Web Calendar;
         }
 
-        .form-group label {
-            font-weight: bold;
-            display: block;
-            margin-bottom: 5px;
-        }
-
-        .form-group input {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 16px;
-        }
-
-        .form-actions {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .form-actions button {
-            background-color: #0078d4;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .form-actions button:hover {
-            background-color: #005a9e;
-        }
+        /* Add the provided CSS here */
     </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-    <div class="container">
-        <div class="form-header">
-            <h1>Sign In</h1>
+    <div id="scheduler_here" class="dhx_cal_container" style='width:100%; height:100%;'>
+        <div class="dhx_cal_navline">
+            <div class="dhx_cal_tab" name="agenda_tab" id="agenda_tab"></div>
         </div>
-        <div class="form-body">
-            <div class="form-group">
-                <label for="signInEmail">Email</label>
-                <input id="signInEmail" type="email" placeholder="Enter your email">
-            </div>
-            <div class="form-group">
-                <label for="signInPassword">Password</label>
-                <input id="signInPassword" type="password" placeholder="Enter your password">
-            </div>
-            <div class="form-actions">
-                <button id="signInButton">Sign In</button>
-            </div>
-        </div>
+        <div class="dhx_cal_header"></div>
+        <div class="dhx_cal_data"></div>
     </div>
 
-    <div class="container">
-        <div class="form-header">
-            <h1>Details</h1>
-        </div>
-        <div class="form-body">
-            <div class="form-group">
-                <label for="enterName">Name</label>
-                <input id="enterName" type="text" placeholder="Enter your name">
-            </div>
-            <div class="form-group">
-                <label for="enterAge">Age</label>
-                <input id="enterAge" type="number" placeholder="Enter your age">
-            </div>
-            <div class="form-group">
-                <label for="enterZip">Zip</label>
-                <input id="enterZip" type="text" placeholder="Enter your ZIP code">
-            </div>
-            <div class="form-group">
-                <label for="enterImage">Image</label>
-                <input id="enterImage" type="text" placeholder="Enter an image URL">
-            </div>
-            <div class="form-actions">
-                <button id="update">UPDATE</button>
-                <button id="remove">REMOVE</button>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="form-header">
-            <h1>Register</h1>
-        </div>
-        <div class="form-body">
-            <div class="form-group">
-                <label for="registerEmail">Email</label>
-                <input id="registerEmail" type="email" placeholder="Enter your email">
-            </div>
-            <div class="form-group">
-                <label for="registerPassword">Password</label>
-                <input id="registerPassword" type="password" placeholder="Enter your password">
-            </div>
-            <div class="form-actions">
-                <button id="registerButton">Register</button>
-            </div>
-        </div>
-    </div>
+    <script>
+        // Initialize DHTMLX Scheduler
+        scheduler.init('scheduler_here', new Date(), "month");
 
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
-        import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-auth.js";
-        import { getDatabase, ref, set, update, remove, get } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-database.js";
+        // Load events from the provided URL
+        scheduler.load("https://www.calendarlabs.com/ical-calendar/ics/46/Germany_Holidays.ics", "ics");
 
-        // Your Firebase configuration here...
-        const firebaseConfig = {
-            apiKey: "AIzaSyDHQBS1IrxegKtXAUck8thEyTKXD3jRtA4",
-            authDomain: "profileapp-b2455.firebaseapp.com",
-            databaseURL: "https://profileapp-b2455-default-rtdb.firebaseio.com",
-            projectId: "profileapp-b2455",
-            storageBucket: "profileapp-b2455.appspot.com",
-            messagingSenderId: "663431184521",
-            appId: "1:663431184521:web:dacc93bbaa53cad8e24658"
-        };
-
-
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth();
-        const db = getDatabase();
-        let userId;
-
-        // Select form elements
-        const enterName = document.querySelector("#enterName");
-        const enterAge = document.querySelector("#enterAge");
-        const enterZip = document.querySelector("#enterZip");
-        const enterImage = document.querySelector("#enterImage");
-
-        // Select buttons
-        const updateBtn = document.querySelector("#update");
-        const removeBtn = document.querySelector("#remove");
-        // Sign-In Button Click Event
-        const signInButton = document.querySelector("#signInButton");
-
-        signInButton.addEventListener('click', () => {
-            const email = document.querySelector("#signInEmail").value;
-            const password = document.querySelector("#signInPassword").value;
-            SignInUser(email, password);
-        });
-
-        // Registration Button Click Event
-        const registerButton = document.querySelector("#registerButton");
-
-        registerButton.addEventListener('click', () => {
-            const email = document.querySelector("#registerEmail").value;
-            const password = document.querySelector("#registerPassword").value;
-            RegisterUser(email, password);
-        });
-        // Registration Function
-        function RegisterUser(email, password) {
-            createUserWithEmailAndPassword(auth, email, password)
-                .then((userCredential) => {
-                    const user = userCredential.user;
-                    userId = user.uid; // Store the user ID
-                    alert("Registration successful. You can now sign in.");
-                    // Optionally, you can automatically sign the user in after registration
-                    SignInUser(email, password);
-                })
-                .catch((error) => {
-                    console.error("Registration error:", error);
-                    alert(error.message);
-                });
-        }
-
-        // Sign-In User Function
-        function SignInUser(email, password) {
-            signInWithEmailAndPassword(auth, email, password)
-                .then((userCredential) => {
-                    const user = userCredential.user;
-                    userId = user.uid; // Store the user ID
-                    alert("Sign-in successful. Now you can access the database.");
-
-                    // Fetch and populate user data from Firebase
-                    const userRef = ref(db, userId); // userId should be the user's UID
-
-                    
-                    // Corrected usage of the get function
-                    get(userRef)
-                        .then((snapshot) => {
-                            if (snapshot.exists()) {
-                                const userData = snapshot.val();
-                                // Populate form fields with data
-                                enterName.value = userData.name;
-                                enterAge.value = userData.age;
-                                enterZip.value = userData.zip;
-                                enterImage.value = userData.image;
-                            } else {
-                                // Data does not exist for the user
-                                console.log("User data not found.");
-                            }
-                        })
-                        .catch((error) => {
-                            console.error("Error fetching user data:", error);
-                        });
-                })
-                .catch((error) => {
-                    console.error("Sign-in error:", error);
-                    alert(error.message);
-                });
-        }
-
-        // Update Button Click Event
-        updateBtn.addEventListener('click', updateData);
-
-        function updateData() {
-            // Check if a user is authenticated
-            const user = auth.currentUser;
-            if (!user) {
-                alert("Please sign in to update data.");
-                return;
-            }
-
-            const newData = {
-                name: enterName.value,
-                age: enterAge.value,
-                zip: enterZip.value,
-                image: enterImage.value
-            };
-
-            const userRef = ref(db, userId); // Get the reference to the user's data based on their UID
-
-            set(userRef, newData) // Use 'set' to update the data
-                .then(() => {
-                    alert("Data updated successfully");
-                })
-                .catch((error) => {
-                    alert(error.message);
-                });
-        }
-
-        // Remove Button Click Event
-        removeBtn.addEventListener('click', removeData);
-
-        function removeData() {
-            // Check if a user is authenticated
-            const user = auth.currentUser;
-            if (!user) {
-                alert("Please sign in to remove data.");
-                return;
-            }
-
-            remove(ref(db, "People/" + userId))
-                .then(() => {
-                    alert("Data deleted successfully");
-                })
-                .catch((error) => {
-                    alert(error.message);
-                });
-        }
+        // Switch to the agenda view
+        scheduler.setCurrentView(scheduler._date, "agenda");
     </script>
 </body>
+
 </html>
+```
+
+Now, the HTML file uses the specified URL for loading calendar events. Adjust any other details as needed for your use case.
